fix section 5 spacing

--- a/styles.css
+++ b/styles.css
@@ -169,8 +169,7 @@ h3{
     min-height: 520px;
     color: black;
     padding-top: 111.4px;
-    display: flex;
-    justify-content: space-evenly;
+
 }
  
 .section5 .img{
